--- a/less/styles.less
+++ b/less/styles.less
@@ -9,16 +9,17 @@ body {
   margin: 0;
 }
 
-header { height: 120px;background-color: #fff;width: 1040px;padding: 20px;margin:auto;}
+header { height: 120px;background-color: #fff;width: auto; padding: 20px;margin:auto;}
 
 h1 {  color: #2e2e2e;width:auto;margin-top: 20px;}
 h2 {  color: #000;width:auto;font-size: 20px;margin-top: 0px;}
 h3 {  color: #1d9c6b;width:auto;font-size: 18px;}
-h4 {  color: #000;width:auto;font-size: 16px;font-weight: normal;}
+h4 {  color: #000;width:auto;font-size: 16px;font-weight: normal;line-height: 22px;}
 
-section { background-color: #fff;width: 1040px;padding: 20px;margin:auto;}
+section { background-color: #fff;width: auto;padding: 20px;margin:auto;}
+section img { display: block; margin-top: 20px;}
 footer { height: 100px;width: 1040px;padding: 20px;margin:auto;}
-nav { margin: auto;width: 1040px;}
+nav { margin: auto;width: auto;}
 
 nav a {
   text-decoration: none;
@@ -31,6 +32,6 @@ nav a:hover {
   color: #1d9c6b;
 }
 
-nav { background-color: #fff;width: 1070px;padding-left:10px;}
+nav { background-color: #fff;width: auto;padding-left:10px;}
 nav ul { list-style-type: square; }
 nav li { padding: 3px;}
