--- a/less/styles.less
+++ b/less/styles.less
@@ -18,7 +18,7 @@ h4 {  color: #000;width:auto;font-size: 16px;font-weight: normal;line-height: 22
 
 section { background-color: #fff;width: auto;padding: 20px;margin:auto;}
 section img { display: block; margin-top: 20px;}
-footer { height: 100px;width: 1040px;padding: 20px;margin:auto;}
+footer { height: 100px;width: auto;padding: 20px;margin:auto;}
 nav { margin: auto;width: auto;}
 
 nav a {
