--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,32 @@
 body {
   background: #ffffff;
   color: #2e2e2e;
-  font-size: 22px;
+  font-size: 20px;
   font-family: Arial;
   font-weight: lighter;
-  margin: 0;
+  margin: 20px;
 }
 header {
   height: 120px;
   background-color: #fff;
-  width: auto;
+  max-width: 1500px;
   padding: 20px;
-  margin: auto;
 }
 h1 {
   color: #2e2e2e;
   width: auto;
-  margin-top: 20px;
+  margin-top: 18px;
 }
 h2 {
   color: #000;
   width: auto;
-  font-size: 20px;
+  font-size: 16px;
   margin-top: 0px;
 }
 h3 {
   color: #1d9c6b;
   width: auto;
-  font-size: 18px;
+  font-size: 16px;
 }
 h4 {
   color: #000;
@@ -36,21 +35,27 @@ h4 {
   font-weight: normal;
   line-height: 22px;
 }
+h1,
+h2,
+a {
+  text-decoration: none;
+  color: #2e2e2e;
+}
 section {
-  background-color: #fff;
-  width: auto;
+  max-width: 1500px;
+  border: 1px solid #e9eff2;
   padding: 20px;
-  margin: auto;
+  border-top: 0;
 }
 section img {
   display: block;
   margin-top: 20px;
+  max-width: 100%;
 }
 footer {
   height: 100px;
-  width: auto;
+  max-width: 1500px;
   padding: 20px;
-  margin: auto;
 }
 nav {
   margin: auto;
@@ -59,16 +64,18 @@ nav {
 nav a {
   text-decoration: none;
   color: #000;
-  font-size: 18px;
+  font-size: 16px;
 }
 nav a:hover {
   text-decoration: none;
   color: #1d9c6b;
 }
 nav {
+  margin: 0;
+  max-width: 1530px;
   background-color: #fff;
-  width: auto;
   padding-left: 10px;
+  border: 1px solid #e9eff2;
 }
 nav ul {
   list-style-type: square;
