--- a/less/styles.less
+++ b/less/styles.less
@@ -1,30 +1,32 @@
-@background-color:#ffffff;
+@background-color:#fff;
 
 body {
   background:@background-color;
   color: #2e2e2e;
-  font-size: 22px;
+  font-size: 20px;
   font-family: Arial;
   font-weight: lighter;
-  margin: 0;
+  margin: 20px;
 }
 
-header { height: 120px;background-color: #fff;width: auto; padding: 20px;margin:auto;}
+header { height: 120px;background-color: #fff; max-width: 1500px; padding: 20px;}
 
-h1 {  color: #2e2e2e;width:auto;margin-top: 20px;}
-h2 {  color: #000;width:auto;font-size: 20px;margin-top: 0px;}
-h3 {  color: #1d9c6b;width:auto;font-size: 18px;}
+h1 {  color: #2e2e2e;width:auto;margin-top: 18px;}
+h2 {  color: #000;width:auto;font-size: 16px;margin-top: 0px;}
+h3 {  color: #1d9c6b;width:auto;font-size: 16px;}
 h4 {  color: #000;width:auto;font-size: 16px;font-weight: normal;line-height: 22px;}
 
-section { background-color: #fff;width: auto;padding: 20px;margin:auto;}
-section img { display: block; margin-top: 20px;}
-footer { height: 100px;width: auto;padding: 20px;margin:auto;}
+h1, h2, a { text-decoration: none; color: #2e2e2e;}
+
+section { max-width: 1500px; border: 1px solid #e9eff2;padding: 20px; border-top: 0;}
+section img { display: block; margin-top: 20px; max-width:100%}
+footer { height: 100px;max-width: 1500px;padding: 20px;}
 nav { margin: auto;width: auto;}
 
 nav a {
   text-decoration: none;
   color: #000;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 nav a:hover {
@@ -32,6 +34,6 @@ nav a:hover {
   color: #1d9c6b;
 }
 
-nav { background-color: #fff;width: auto;padding-left:10px;}
+nav { margin: 0; max-width: 1530px; background-color: #fff; padding-left:10px; border: 1px solid #e9eff2;}
 nav ul { list-style-type: square; }
 nav li { padding: 3px;}
