added descriptions for fetures with notes

--- a/less/styles.less
+++ b/less/styles.less
@@ -37,3 +37,5 @@ nav a:hover {
 nav { margin: 0; max-width: 1530px; background-color: #fff; padding-left:10px; border: 1px solid #e9eff2;}
 nav ul { list-style-type: square; }
 nav li { padding: 3px;}
+
+ul .note { background-color: #fff7e6; min-width: 200px;}
