--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,16 @@ nav li {
   padding: 3px;
 }
 ul .note {
+  list-style-type: none;
   background-color: #fff7e6;
   min-width: 200px;
+  padding: 10px;
+  font-size: 16px;
+}
+.note-head {
+  color: #ebba51;
+  font-size: 16px;
+  font-weight: bold;
+  padding-left: 7px;
+  padding-bottom: 7px;
 }
