--- a/less/styles.less
+++ b/less/styles.less
@@ -38,4 +38,6 @@ nav { margin: 0; max-width: 1530px; background-color: #fff; padding-left:10px; b
 nav ul { list-style-type: square; }
 nav li { padding: 3px;}
 
-ul .note { background-color: #fff7e6; min-width: 200px;}
+ul .note { list-style-type: none; background-color: #fff7e6; min-width: 200px;
+  padding: 10px;font-size: 16px; }
+.note-head { color: #ebba51; font-size: 16px; font-weight: bold; padding-left: 7px; padding-bottom: 7px; }
