--- a/less/styles.less
+++ b/less/styles.less
@@ -39,5 +39,5 @@ nav ul { list-style-type: square; }
 nav li { padding: 3px;}
 
 ul .note { list-style-type: none; background-color: #fff7e6; min-width: 200px;
-  padding: 10px;font-size: 16px; }
+  padding: 10px;font-size: 16px; margin-top: 5px; margin-bottom: 5px;border: 1px solid #ffebbc;}
 .note-head { color: #ebba51; font-size: 16px; font-weight: bold; padding-left: 7px; padding-bottom: 7px; }
