--- a/less/styles.less
+++ b/less/styles.less
@@ -38,6 +38,12 @@ nav { margin: 0; max-width: 1530px; background-color: #fff; padding-left:10px; b
 nav ul { list-style-type: square; }
 nav li { padding: 3px;}
 
-ul .note { list-style-type: none; background-color: #fff7e6; min-width: 200px;
+ul.list-rig-01 { list-style-type: none; }
+ul.list-rig-01 li { padding: 3px; }
+ul.list-rig-02 { list-style-type: none; }
+
+ul.menu-lvl-01 { list-style-type: circle; }
+
+ul.note { list-style-type: none; background-color: #fff7e6; min-width: 200px;
   padding: 10px;font-size: 16px; margin-top: 5px; margin-bottom: 5px;border: 1px solid #ffebbc;}
 .note-head { color: #ebba51; font-size: 16px; font-weight: bold; padding-left: 7px; padding-bottom: 7px; }
